--- a/dudacake/index.html
+++ b/dudacake/index.html
@@ -65,23 +65,47 @@
                 <option value="7kg">7kg</option>
                 <option value="outro">Outro...</option>
             </select>
-            <label for="cupcakes">Quer cupcakes?</label>
+            <label for="cupcakes">Quer cupcakes? R$5un</label>
             <select id="cupcakes" name="cupcakes" required>
                 <option value="">Selecione...</option>
-                <option value="quero cupcakes">Sim</option>
-                <option value="não quero cupcakes">Não</option>
+                <option value="não cupcakes">Não</option>
+                <option value="Ninho">Ninho</option>
+                <option value="chocolate">Chocolate</option>
+                <option value="coco cremoso">Coco Cremoso</option>
+                <option value="Doce de Leite">Doce de Leite</option>
+                
             </select>
-            <label for="doces">Quer doces?</label>
+            <label for="doces">Quer doces? Valor por Cento.</label>
             <select id="doces" name="doces" required>
                 <option value="">Selecione...</option>
-                <option value="quero doces">Sim</option>
-                <option value="não quero doces">Não</option>
+                <option value="não">Não</option>
+                <option value="brigadeiro">Brigadeiro $100</option>
+                <option value="beijinho">Beijinho $100</option>
+                <option value="ninho">Ninho $100</option>
+                <option value="ninho com nutela">Ninho com Nutela $150</option>
+                <option value="Ferrero Rocher">Ferrero Rocher $150</option>
+                <option value="oreo">Oreo $150</option>
+                <option value="churros">Churros $150</option>
+                <option value="Belga">Belga $150</option>
+                <option value="Paçoca">Paçoca $150</option>
+                <option value="casadinho">Casadinho $150</option>
+                <option value="meio amargo">Meio Amargo $150</option>
+                <option value="kit Kat">Kit Kat</option>
             </select>
-            <label for="salgados">Quer salgados?</label>
+            <label for="salgados">Quer salgados? Valor por Cento.</label>
             <select id="salgados" name="salgados" required>
                 <option value="">Selecione...</option>
-                <option value="quero salgados">Sim</option>
+                <option value="não">Não</option>
                 <option value="não quero salgados">Não</option>
+                <option value="coxinha">Coxinha $45</option>
+                <option value="Napolitano">Napolitano $45</option>
+                <option value="risole de carne">Risole de Carne $45</option>
+                <option value="Requeijão">Requeijão $45</option>
+                <option value="kibe">Kibe $45</option>
+                <option value="creme de milho">Creme de Milho $45</option>
+                <option value="cheddar">Cheddar $45</option>
+                <option value="churros">Churros $45</option>
+                <option value="enroladinho de salsicha">Enroladinho de Salsicha $55</option>
             </select>
 
             <button type="submit">Enviar pelo WhatsApp</button>
@@ -131,3 +155,4 @@ document.getElementById('cakeForm').addEventListener('submit', function(event) {
 </body>
 
 </html>
+
