--- a/dudacake/index.html
+++ b/dudacake/index.html
@@ -65,7 +65,7 @@
                 <option value="7kg">7kg</option>
                 <option value="outro">Outro...</option>
             </select>
-            <label for="cupcakes">Quer cupcakes? R$5un</label>
+            <label for="cupcakes">Quer cupcakes? R$5 unidade</label>
             <select id="cupcakes" name="cupcakes" required>
                 <option value="">Selecione...</option>
                 <option value="não cupcakes">Não</option>
@@ -90,7 +90,7 @@
                 <option value="Paçoca">Paçoca $150</option>
                 <option value="casadinho">Casadinho $150</option>
                 <option value="meio amargo">Meio Amargo $150</option>
-                <option value="kit Kat">Kit Kat</option>
+                <option value="kit Kat">Kit Kat $150</option>
             </select>
             <label for="salgados">Quer salgados? Valor por Cento.</label>
             <select id="salgados" name="salgados" required>
@@ -109,7 +109,7 @@
             </select>
 
             <button type="submit">Enviar pelo WhatsApp</button>
-            <p>Kits promocionais ou Personalizados podem ser pedidos diretamente no WhatsApp, assim conseguimos atender melhor a sua necessidade.</p>
+            <p>Kits Promocionais, Trufas ou Personalizados podem ser pedidos diretamente no WhatsApp, assim conseguimos atender melhor a sua necessidade.</p>
 
         </form>
     </div>
@@ -155,4 +155,5 @@ document.getElementById('cakeForm').addEventListener('submit', function(event) {
 </body>
 
 </html>
+
 
